# learn_goose

./: .gitignore  generate_init.py  intent_analysis.py  learning-plan.md
goose-py/: .gitignore  pyproject.toml  test_llm.py
goose-py/src/goose/: __init__.py  config.py  container.py  engine.py  events.py  globals.py  main.py  model.py  registry.py  system.py  truncation.py  types.py
goose-py/src/goose.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
goose-py/src/goose/adapter/: __init__.py  base.py  manager.py  vueflow.py
goose-py/src/goose/agent/: __init__.py  agent.py
goose-py/src/goose/agents/: agent.py
goose-py/src/goose/cli/: main.py  renderer.py
goose-py/src/goose/component/: base.py  decorator.py  library.py  node.py  protocol.py  registry.py
goose-py/src/goose/components/: __init__.py  base.py  library.py  node.py  protocol.py  registry.py
goose-py/src/goose/conversation/: __init__.py  conversation.py  message.py
goose-py/src/goose/events/: __init__.py  bus.py  store.py  streamer.py  types.py
goose-py/tests/: client_demo.py  mock_mcp_server.py  test.json  test_adapter_vueflow.py  test_agent_bus.py  test_agent_resume.py  test_agent_tools.py  test_components_suite.py  test_coze_full.py  test_engine_full.py  test_eventd.py  test_llm.py  test_mcp_integration.py  test_mcp_simple.py  test_persistence_integration.py  test_prompt_system.py  test_registry_integrity.py  test_session.py  test_system_full.py  test_token_pruning.py  test_workflow.py  test_workflow_hybrid_complex.py  test_workflow_scheduler.py  test_workflow_subgraph.py
(+129 files in other folders)
