[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goose"
version = "0.1.0"
description = "An open-source, extensible AI agent that goes beyond code suggestions (Python Port)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "openai>=1.0.0",
    "minijinja>=1.0.0",  # 如果后续要复刻模板功能
    # "tiktoken",        # 如果后续要做 token 计算
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort"
]

[project.scripts]
# 这允许你在命令行直接运行 `goose` 来启动程序
goose = "goose.main:run"

[tool.setuptools.packages.find]
where = ["src"]  # 告诉 setuptools 源码在 src 目录下

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"